--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Activity 1- Python Fundamentals",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO3qIWHgNgd/dr2OSLkMn7Y",
+      "authorship_tag": "ABX9TyMEg/FBJc7Lw1dH9u5cgivH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1132,13 +1132,378 @@
     {
       "cell_type": "code",
       "source": [
-        "w_pg, w_mg, w_fg= 0.3, 0.3, 0.4"
+        "w_pg, w_mg, w_fg= 0.3, 0.3, 0.4\n",
+        "print(\"The weight of your semestral grades are:\\\n",
+        "      \\n\\t{: .2%} for Prelims\\\n",
+        "      \\n\\t{: .2%} for Midterms, and\\\n",
+        "      \\n\\t{: .2%} for Finals.\" .format(w_pg, w_mg, w_fg))"
       ],
       "metadata": {
-        "id": "LO0VP1t2-WRD"
+        "id": "LO0VP1t2-WRD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "78a3e69e-3276-4f24-ab1e-331dd490cf10"
       },
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weight of your semestral grades are:      \n",
+            "\t 30.00% for Prelims      \n",
+            "\t 30.00% for Midterms, and      \n",
+            "\t 40.00% for Finals.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x= input(\"lagay ka po ng number heree:\")\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "_8HnT1R8ucR7",
+        "outputId": "8fd46724-f3fb-4a4f-f734-ea3f46ef4e64"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "lagay ka po ng number heree:1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'1'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name= input(\"Annyeong:\")\n",
+        "pg=input(\"Lagay mo prelim grade:\")\n",
+        "mg=input(\"Lagay mo midterm grade:\")\n",
+        "fg=input(\"Lagay mo prelim grade:\")\n",
+        "sem_grade= None\n",
+        "print(\"belooo {}, ur sem grade izzzzzzz, *drums*: {}\".format(name, sem_grade))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "01ScIOw5uyCN",
+        "outputId": "1a6372a4-d986-4d9f-8326-c5d19bd7cd62"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Annyeong:joey\n",
+            "Lagay mo prelim grade:99\n",
+            "Lagay mo midterm grade:100\n",
+            "Lagay mo prelim grade:88\n",
+            "belooo joey, ur sem grade izzzzzzz, *drums*: None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Looping Statements"
+      ],
+      "metadata": {
+        "id": "kZfbo1Twv8uH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## While"
+      ],
+      "metadata": {
+        "id": "c5AbUlW3wBe2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## while loop\n",
+        "jong,suk= 0,10\n",
+        "while(jong<=suk):\n",
+        "    print(f\"{jong}\\t|\\t{suk}\")\n",
+        "    jong+=1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w49ufjXZwII0",
+        "outputId": "a8c0e8af-3ec7-4ef0-c7d7-2320602aee75"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\t|\t10\n",
+            "1\t|\t10\n",
+            "2\t|\t10\n",
+            "3\t|\t10\n",
+            "4\t|\t10\n",
+            "5\t|\t10\n",
+            "6\t|\t10\n",
+            "7\t|\t10\n",
+            "8\t|\t10\n",
+            "9\t|\t10\n",
+            "10\t|\t10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for (int i=0; i<10; i++){\n",
+        "#printf(i)\n",
+        "# }\n",
+        "\n",
+        "jungkook=0\n",
+        "for jungkook in range(10):\n",
+        "  print(jungkook)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hMsjUoowwg5R",
+        "outputId": "2b8b0d79-b2ca-4ef9-9397-6e20786c0e58"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "playlist=[\"Magic Shop\",\"Araw-araw\",\"13\"]\n",
+        "print('chilling: \\n')\n",
+        "for song in playlist:\n",
+        "    print (song)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3iBfrSpOyG36",
+        "outputId": "ba6108fa-18fa-4967-b1d3-0366c2a133d5"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "chilling: \n",
+            "\n",
+            "Magic Shop\n",
+            "Araw-araw\n",
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Flow Control"
+      ],
+      "metadata": {
+        "id": "QIoiL3i6y0_9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Condition Statements"
+      ],
+      "metadata": {
+        "id": "GvchwSC8y3Bs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "one, two= 25, 30\n",
+        "if(one == two):\n",
+        "  print('congarts')\n",
+        "elif(one>two):\n",
+        "  print('okay')\n",
+        "else:\n",
+        "  print('sige')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K1ilPqr3y9xv",
+        "outputId": "1f5ff2b1-fd11-4f3c-8318-1288c9259fd9"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sige\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Function"
+      ],
+      "metadata": {
+        "id": "BPKdnQL21h4g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# void deleteuser(int user id)\n",
+        "\n",
+        "def delete_user(userid):\n",
+        "    print(\"Yehey deleted naaa <3: {}\".format(userid))\n",
+        "\n",
+        "def delete_all_user ():\n",
+        "    print(\"all deleted na po ^_^\")"
+      ],
+      "metadata": {
+        "id": "Qlfy1NDb1kC0"
+      },
+      "execution_count": 27,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "userid=\"park jimin\"\n",
+        "delete_user(\"park jimin\")\n",
+        "delete_all_user()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jxgpu-V-18eP",
+        "outputId": "2a8098ae-6084-476a-d343-4ae22feb51ed"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yehey deleted naaa <3: park jimin\n",
+            "all deleted na po ^_^\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(addend1, addend2):\n",
+        "  return addend1 + addend2\n",
+        "\n",
+        "def power_of_base2(exponent):\n",
+        "    return 2**exponent"
+      ],
+      "metadata": {
+        "id": "yQk7LqvI3kBJ"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#addend1, addend2= 3,11\n",
+        "#add(addend1, addend2)\n",
+        "\n",
+        "exponent = 5\n",
+        "power_of_base2(exponent)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iEsQXAw73z6K",
+        "outputId": "f4223104-1a05-4050-e493-4eda20b900eb"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Lambda Function"
+      ],
+      "metadata": {
+        "id": "J-nnTPZ23gOX"
+      }
     }
   ]
 }
