--- a/Matrix_Arriola_Valenzuela.ipynb
+++ b/Matrix_Arriola_Valenzuela.ipynb
@@ -37,6 +37,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "X79ZuIcO1hfH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##Task 1\n",
@@ -736,7 +747,12 @@
       "cell_type": "markdown",
       "source": [
         "##Conclusion\n",
-        "For your conclusion synthesize the concept and application of the laboratory. Briefly discuss what you have learned and achieved in this activity. Also answer the question: \"How can matrix operations solve problems in technology?\"."
+        "\n",
+        "\n",
+        "> Matrix is a method or technique that is widely used in mathematics and physics to easier solve linear equations.[9] In this laboratory, the students gained knowledge about how the matrix can be applied to programming. They have learned that matrices can be: converted into a linear combination or LaTex Markdown, classified into zero matrix, identity matrix or ones matrix, and solved with different operations such as addition, subtraction, multiplication, and division. With the help of the functions and variables like NumPy or np, and “describe_mat(),” “mat_desc(),” & “mat_operations(),” the students were able to run programs that prints matrices and define them. \n",
+        "\n",
+        "\n",
+        "> The world today adapted to the advancement of technology which increased human reliability, especially in the future. The current generation is welcomed in the world wherein they must be skilled and knowledgeable enough on technology to survive and work as a person. [10] This technology nowadays is composed of endless codes to make something work, including matrix. Therefore when technology has an emerging problem, it is only through itself also that it can be solved. One application that matrix can be used as a solution would be on Wireless Communication because it is a sensor that detects problems on wireless communication and its signal estimation. Matrices are said to be used as wireless signals(sensor arrays) in which the information is extracted and operated. The sensor arrays detect and locate the problem radiating provenance by the temporal and spatial information collected from the sensors. The matrices can help the process of illustrating digital images.[9]"
       ],
       "metadata": {
         "id": "Dkb5l3KwyT95"
