--- a/Assignment_4.ipynb
+++ b/Assignment_4.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPZrz8quWSKkUwj4PIP7PDp",
+      "authorship_tag": "ABX9TyPifjtozpNHdtWgfzGi9l0T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2193,6 +2193,17 @@
       ],
       "metadata": {
         "id": "dap9Swi4xy56"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In totality, this laboratory experiment enhanced the matrix operation knowledge of the students along with the utilization of Python programming with the said topic. In relation, transposition is discussed and applied - it is the inversion of the row and column of a given matrix. Furthermore, the dot product is explained in terms of how it operates - the column of the first matrix should have the same dimension as the row of the second matrix so that the operation can continue - and the properties of the dot product are also defined. Next is the determinant where it can help in identifying the inverse of a matrix and lastly is the inverse of a matrix. This is the corresponding matrix of a matrix that if multiplied with each other, it would yield to the identity matrix. \n",
+        "\n",
+        "Another learning that the students accomplished in this activity was the proving of the dot product properties. The properties of multiplication in algebra are the same for matrices except for the commutative property. Overall matrix operations are significant in our lives as it gives a definite number or value that is needed given a situation. One of the many applications of matrix operations is the nutrition balance in healthcare. Our foods are composed of different nutrients and vitamins that we need for our body. However, too much of something can be bad and thus the need to control the amount of intake. In order to obtain that certain value and amount of food to take, there is a need for computation and matrix operations can be used for this account [5]. Matrix operations would help balance the amount of nutrients in a given food simultaneously with another food that has its own nutritional value.\n"
+      ],
+      "metadata": {
+        "id": "xxhsXaGkJLGq"
       }
     }
   ]
